# plant-soil-monitoring-system

./: .gitignore  Dockerfile  README.md  compose.yml  ddl.sql  mosquitto.conf  mosquitto_pass.conf  pyproject.toml  requirements.txt
client/: platformio.ini
client/humidity/src/: main.cpp
client/src/: main.cpp
docs/: esp32.fzz  humidity_sensor.drawio
grafana/: humidity-1700429486811.json
server/: config.py  database.py  main.py
