[tool.poetry]
name = "humidity-sensor"
version = "0.1.0"
description = ""
authors = ["tomaszbk-pc <zubik.tomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pymongo = "^4.6.0"
uvicorn = "^0.24.0.post1"
paho-mqtt = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
